--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,37 @@
 /* z-index levels: 1000(header) 750(preloader) */
 
+#guide {
+  z-index: 30000;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+}
+
+#guide .line:nth-child(1) {
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: #f00;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  opacity: 0.4;
+}
+
+#guide .line:nth-child(2) {
+  position: absolute;
+  width: 1px;
+  height: 100%;
+  background-color: #f00;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0.4;
+}
+
 /* preloader specific styles - start */
 
 #preloader {
